<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/surprise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surprise"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/palepink"/>

    <!--image here-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/opening"
        app:srcCompat="@drawable/mobile_custom_project"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name_and_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".55"/>
    <!--image here-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/homepageimg"
        app:srcCompat="@drawable/home_page_image"
        app:layout_constraintTop_toBottomOf="@id/name_and_period"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="35dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>