<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/babyblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BassClef">

    <!--title-->
    <TextView
        android:fontFamily="@font/quicksand"
        android:id="@+id/titleOfQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/quiz_Bass_clef_notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".1"/>
    <!--image-->

    <!--question-->
    <TextView
        android:fontFamily="@font/quicksand"
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_this_note"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_imgs"
        android:layout_margin="20dp" />
    <!--image-->
    <ImageView
        android:id="@+id/note_imgs"
        android:layout_width="400dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/titleOfQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!--answer-->
    <EditText
        android:id="@+id/answer"
        android:autofillHints="Typer A Note Name Here"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </EditText>
    <Button
        android:id="@+id/submit"
        android:text="@string/submit_answer"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/answer"
        app:layout_constraintTop_toBottomOf="@id/question">

    </Button>
    <Button
        android:id="@+id/next"
        android:textColor="@color/black"
        android:backgroundTint="@color/lilac"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/answer"
        app:layout_constraintTop_toBottomOf="@id/submit">

    </Button>
    <TextView
        android:id="@+id/correct"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>
    <Spinner
    android:id="@+id/inst_dropdown"
    app:layout_constraintTop_toBottomOf="@id/correct"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_width="250dp"
    android:layout_height="45dp"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dropdown"/>

    <!--instruments-->
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inst_dropdown"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:srcCompat="@drawable/bass_family" />

</androidx.constraintlayout.widget.ConstraintLayout>